--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,4 +1,4 @@
 
 configuracion.texto=Configurando ambiente de Desarrollo
-configuracion.autor.nombre=Eduardo
+configuracion.autor.nombre=Eduardo.
 configuracion.autor-email=ejctecco@gmail.com
